# nwb-mcp-server

./: .gitignore  IDEAS.md  README.md  SPECS.md  examples.py  pyproject.toml
.claude/skills/nwb-mcp-analysis/: SKILL.md
.claude/skills/nwb-mcp-analysis/evals/: evals.json
.github/workflows/: publish.yml
agents/.github/chatmodes/: NWB No Code.chatmode.md  NWB Supervised Coding.chatmode.md
data/: 0.nwb
examples/: README.md  age_performance_analysis_sonnet4.ipynb
src/nwb_mcp_server/: __init__.py  server.py  sqlite.py
tests/: test_server.py
tests/data/: 1.nwb
