[project]
name = "nwb-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bjhardcastle", email = "ben.hardcastle@alleninstitute.org" }
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.10.4",
    "lazynwb>=0.2.65",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
nwb-mcp-server = "nwb_mcp_server.server:main"
